--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,4 +2,8 @@ footer {
   margin-top: 80px;
   padding: 20px;
   text-align: center;
+  /* background-image: url("../../../public/banner.webp"); */
+  bottom: 0;
+  width: 100%;
+
 }
